# ode-to-stick-figures

./: .claude-approvals.yml  .env.example  .git-blame-ignore-revs  .gitignore  AGENTS.md  BUG_LOG.md  PLAN.md  README.md  TASKS.md  create_coordinator.py  create_specialists.py  download_deliverable.py  lefthook.yml  pyproject.toml  requirements.txt  run_creature_swarm.py  setup_environment.py  upload_skills.py  vercel.json
.githooks/: README.md  pre-commit  update-tasks.py
.github/workflows/: ci.yml
agents/: definitions.py
api/: index.py
contracts/: README.md  creature-spec.schema.json
creature-swarm/: TASKS.md  create_specialists.py  requirements.txt  run_creature_swarm.py  setup_environment.py
creature-swarm/agents/: definitions.py
creature-swarm/contracts/: README.md  creature-spec.schema.json
creature-swarm/examples/: creature-spec-flapjack.json
creature-swarm/lib/: spec.py
creature-swarm/skills/fieldguide-html/: SKILL.md  render.py  template.html
creature-swarm/skills/walk-cycle-anim/: SKILL.md  build_walk_cycle.py  rig_from_image.py  template.html
creature-swarm/skills/walk-cycle-anim/rigs/: arborescens-triangulum.rig.json  bee.rig.json  bird.rig.json  millipede.rig.json  pen-balloon-bird.rig.json  pencil-creature.rig.json  pig-face.rig.json  poptart-and-person.rig.json  poptart.rig.json  shark-dog.rig.json  sharpie-horse.rig.json  snowmen-scene.rig.json  trunk-scorpion-chimera.rig.json
creature-swarm/tests/: test_client.py  test_definitions.py  test_fieldguide.py  test_spec.py
creature-swarm/ui/: index.html  pipeline.py  prewarm.py  serve.py
creature-swarm/ui/prebuilt/: arborescens-triangulum.glb  arborescens-triangulum.guide.html  arborescens-triangulum.html  arborescens-triangulum.society.md  arborescens-triangulum.spec.json  bee.glb  bee.guide.html  bee.habitat.md  bee.html  bee.society.md  bird.biologist.md  bird.glb  bird.guide.html  bird.html  bird.society.md  bird.spec.json  millipede.glb  millipede.guide.html  millipede.html  pen-balloon-bird.guide.html  pen-balloon-bird.html  pencil-creature.guide.html  pencil-creature.habitat.md  pencil-creature.html  pencil-creature.society.md  pig-face.guide.html  pig-face.habitat.md  pig-face.html  poptart-and-person.guide.html  poptart-and-person.habitat.md  poptart-and-person.html  poptart-and-person.spec.json  shark-dog.guide.html  shark-dog.html  sharpie-bird.glb  sharpie-bird.guide.html  sharpie-horse.glb  sharpie-horse.guide.html  sharpie-horse.html  sharpie-horse.society.md  (+7 more)
docs/: site-description.md
docs/superpowers/plans/: 2026-07-17-biologist-habitat-skills.md  2026-07-17-creature-swarm.md
docs/superpowers/specs/: 2026-07-17-biologist-habitat-skills-design.md  2026-07-17-creature-swarm-design.md
evals/: README.md  cases.py  checks.py  contract.py  requirements.txt  run_evals.py
evals/fixtures/: bee.json  bird.json  pencil-creature.json  pig-face.json  shark-dog.json  snowmen-scene.json
examples/drawings/: README.md
examples/field-guides/sharpie-bird/: README.md  field-guide.html  sharpie-bird.rig.json  walk-cycle.html
lib/: client.py  telemetry.py
schemas/: creature-spec.example.json  creature-spec.schema.json
skills/creature-biology/: SKILL.md
skills/fieldguide-html/: SKILL.md  render.py  template.html
skills/folklore-society/: SKILL.md
skills/habitat-ecology/: SKILL.md
skills/procedural-creature-3d/: SKILL.md  build.py
skills/walk-cycle-anim/: SKILL.md  build_walk_cycle.py  rig_from_image.py  template.html
skills/walk-cycle-anim/rigs/: bird.rig.json  poptart-and-person.rig.json  poptart.rig.json  shark-dog.rig.json  sharpie-bird.rig.json  walrus-camel-chimera.rig.json
tests/: conftest.py  test_auth.py  test_client.py  test_creature3d.py  test_definitions.py  test_fieldguide.py  test_serve.py  test_storage.py  test_upload_build.py  test_upload_skills.py
ui/: auth.py  error.html  index.html  pages.py  pipeline.py  prewarm.py  serve.py  storage.py  upload_build.py
ui/prebuilt/: arborescens-triangulum.biologist.md  arborescens-triangulum.guide.html  arborescens-triangulum.habitat.md  arborescens-triangulum.html  bee.biologist.md  bee.guide.html  bee.html  bee.spec.json  bird.guide.html  bird.habitat.md  bird.html  millipede.biologist.md  millipede.guide.html  millipede.habitat.md  millipede.html  millipede.society.md  millipede.spec.json  pen-balloon-bird.biologist.md  pen-balloon-bird.glb  pen-balloon-bird.guide.html  pen-balloon-bird.habitat.md  pen-balloon-bird.html  pen-balloon-bird.society.md  pen-balloon-bird.spec.json  pencil-creature.biologist.md  pencil-creature.glb  pencil-creature.guide.html  pencil-creature.html  pencil-creature.spec.json  pig-face.biologist.md  pig-face.glb  pig-face.guide.html  pig-face.html  pig-face.society.md  pig-face.spec.json  poptart-and-person.biologist.md  poptart-and-person.glb  poptart-and-person.guide.html  poptart-and-person.html  poptart-and-person.society.md  (+36 more)
